Fix form text-align

--- a/css/styles.css
+++ b/css/styles.css
@@ -120,6 +120,9 @@ footer p {
 footer h4.contact {
     display:none;
   }
+.wufoo {
+    text-align: left;
+  }
 .wufoo header {
   border: 0;
   padding: 0;
